Test fixes, move more use cases over